Simply fixed spacing on save buttons

--- a/server/view/css/contentPage.css
+++ b/server/view/css/contentPage.css
@@ -325,10 +325,10 @@ h1 {
 Save and cancel buttons
 *****/
  #buttons {
-    margin-top:10px;
+
 }
 .save {
-    margin-top:10px;
+    margin-top:15px;
     float:left;
     -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
     -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -375,7 +375,7 @@ Save and cancel buttons
     top:1px;
 }
 .cancel {
-    margin-top:10px;
+    margin-top:15px;
     float:left;
     margin-left:5px;
     -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
